# rust-developer-course

./: .gitignore  LICENSE  README.md
hw_01/: Cargo.toml
hw_01_hello_world/: Cargo.toml
hw_01_hello_world/src/: main.rs
hw_02/: Cargo.toml
hw_02/src/: main.rs
hw_02_syntax_and_variables/: Cargo.toml
hw_02_syntax_and_variables/src/: main.rs
hw_02_syntax_and_variables/src/libs/: convertors.rs  transformation.rs  transformation_type.rs
hw_03/: Cargo.toml
hw_03/src/: convertors.rs  lib.rs  main.rs  transformation.rs
hw_03/src/libs/: transformation.rs
hw_04/: Cargo.toml  README.md
hw_04/src/: convertors.rs  libs.rs  main.rs  transformation.rs  transformation_builder.rs
hw_04/src/libs/: transformation_builder.rs  transformation_input.rs
hw_05/: Cargo.toml
hw_05/client/: Cargo.toml
hw_05/client/src/: main.rs
hw_05/libs/src/: lib.rs
hw_05/server/: Cargo.toml
hw_06/: README.md
hw_06/client/: Cargo.toml
hw_06/client/src/: main.rs
hw_06/libs/: Cargo.toml
hw_06/libs/src/: lib.rs
hw_06/server/src/: main.rs
hw_07/: README.md
hw_07/client/: Cargo.toml
hw_07/client/src/: args.rs  commands.rs  errors.rs  lib.rs  main.rs
hw_07/libs/: Cargo.toml
hw_07/libs/src/: errors.rs  lib.rs  receiver.rs  sender.rs
hw_07/server/: Cargo.toml
hw_07/server/src/: args.rs  lib.rs  main.rs
hw_08/: README.md
hw_08/client/: Cargo.toml
hw_08/client/src/: commands.rs  lib.rs  main.rs
hw_08/database/src/: lib.rs  models.rs
hw_08/libs/: Cargo.toml
hw_08/libs/src/: lib.rs  message.rs
hw_08/server/: Cargo.toml
hw_08/server/src/: lib.rs  main.rs
hw_09/: Cargo.toml  README.md  example.env
hw_09/client/src/: args.rs  commands.rs  errors.rs  lib.rs
hw_09/database/: Cargo.toml
hw_09/database/src/: schema.rs
hw_09/libs/: Cargo.toml
hw_09/libs/src/: builder.rs  lib.rs  message.rs  password.rs  receiver.rs  sender.rs
hw_09/server/: Cargo.toml
hw_09/server/src/: args.rs  lib.rs  main.rs
libs/: Cargo.toml
server/src/: main.rs
(+3 files in other folders)
