[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bus = "2.4.1"
clap = { version = "4.4.7", features = ["derive"] }
image = "0.24.7"
libs = { path = "../libs" }
rayon = "1.8.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
