[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
crossterm = "0.27.0"
image = "0.24.7"
libs = { path = "../libs" }
regex = "1.10.2"
thiserror = "1.0.50"
tokio = { version = "1.35.1", features = ["full"] }
viuer = "0.7.1"
