[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
database = { path = "../database" }
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15.7"
image = "0.24.7"
libs = { path = "../libs" }
rayon = "1.8.0"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
